--- a/form.html
+++ b/form.html
@@ -8,7 +8,10 @@ input{
         margin: 8px;
         max-width: 200px;
 }
-
+button{
+    max-width: 110px;
+   margin: 8px;
+}
 
 </style>
 <form action="controller.php" method="POST" enctype="multipart/form-data">
