--- a/form.html
+++ b/form.html
@@ -26,3 +26,23 @@ button{
 
     </fieldset>
 </form>
+
+<form>
+    <fieldset>
+        <legend> Other Input Controls</legend><legends>
+            <input type="date"/>
+            <input type="=number"/>
+            <input type="checkbox"/>
+            <input type="range"/>
+            <input type="email"/>
+            <input type="color"/>
+            <input type="file"/>
+            <input type="radio"/>
+            
+
+            <select>
+                <option>Option 1</option>
+                <option>Option 2</option>
+            </select>
+    </fieldset>
+</form>
