--- a/form.html
+++ b/form.html
@@ -44,5 +44,10 @@ button{
                 <option>Option 1</option>
                 <option>Option 2</option>
             </select>
+
+            <br>
+            <textarea rows="18" cols="40" maximum="">
+            </textarea>
+
     </fieldset>
 </form>
